testcases/error/mismatch_attribute_args.veryl
#[allow(dummy_name)]
module mismatch_attribute_args {}
